# Symphonia.hs

./: .gitignore  .gitmodules  .hlint.yaml  README.md  justfile  stack.yaml
orfeo/: CHANGELOG.md  orfeo.cabal
ritornello/: CHANGELOG.md  README.md  ritornello.cabal  stack.yaml
ritornello/src/Ritornello/: Basic.hs  DSL.hs  Signal.hs
ritornello/src/Ritornello/Ugens/: Operators.hs  Osc.hs  Primitives.hs
