cabal-version:       2.2

name:                ritornello
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/ritornello#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/ritornello#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Ritornello.Signal
                       Ritornello.Basic
                       Ritornello.DSL
                       Ritornello.Ugens.Operators 
                       Ritornello.Ugens.Osc
                       Ritornello.Ugens.Primitives
  build-depends:       base 
                     , arrows
                     , bytestring
                     , concurrency
                     , containers
                     , deepseq
                     , mtl
                     , text
                     , process
                     , vector
                     , random
                     , vector-sized
                     , array
                     , async
                     , stm
                     , clock
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable ritornello-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , ritornello
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite ritornello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ritornello
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/githubuser/ritornello
